# student-feedback-analysis-using-QNLP

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-azure.yml  main_feedback-qnlp-api.yml
models/: model_019d3b85fe61416cae805f69c1983d55.joblib  model_5c8fdd4087794127ab2fdf77d7b34651.joblib
notebooks/: 01_qnlp_student_feedback.ipynb
scripts/: analyze_file.py  check_app.py  list_models.py  process_local.py  test_upload.py  train.py
src/feedback_qnlp/: __init__.py  model.py  preprocess.py  utils.py
src/student_feedback_qnlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/samples/: google_forms_template.csv
templates/: map.html  results.html  upload.html
tests/: test_flask.py  test_preprocess.py  test_quantum.py  test_sentiment.py
uploads/: 2ce30d859ce14a55ad44ef10c2622872_student_reviews.csv  342ccfa055ce4a2db42fc475a6b9f808_student_feedback_full.csv
